@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cl.cavallinux</groupId>
 	<artifactId>jisocreator</artifactId>
-	<version>0.1.3</version>
+	<version>0.1.4</version>
 	<name>JisoCreator</name>
 	<description>MKISOFS Frontend</description>
 
@@ -31,6 +31,45 @@
 			</dependencies>
 		</profile>
 		<profile>
+			<id>linux-cmdlinemode</id>
+			<properties>
+				<swt.platform>gtk.linux.x86_64</swt.platform>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.platform</groupId>
+					<artifactId>${swt.platform.name}</artifactId>
+					<version>${swt.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.eclipse.platform</groupId>
+					<artifactId>org.eclipse.swt</artifactId>
+					<version>${swt.version}</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>${exec.maven.plugin}</version>
+						<configuration>
+							<executable>java</executable>
+							<arguments>
+								<argument>--add-opens</argument>
+								<argument>java.base/java.util=ALL-UNNAMED</argument>
+								<argument>${debug.jvm.args}</argument>
+								<argument>${jvm.nativeacess.arg}</argument>
+								<argument>-jar</argument>
+								<argument>${project.build.directory}/${project.artifactId}.jar</argument>
+								<argument>-h</argument>
+							</arguments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>windows</id>
 			<properties>
 				<swt.platform>win32.win32.x86_64</swt.platform>
@@ -55,6 +94,52 @@
 				</dependency>
 			</dependencies>
 		</profile>
+		<profile>
+			<id>windows-cmdlinemode</id>
+			<properties>
+				<swt.platform>win32.win32.x86_64</swt.platform>
+				<swt.platform.toexclude.name>org.eclipse.swt.gtk.linux.x86_64</swt.platform.toexclude.name>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.platform</groupId>
+					<artifactId>${swt.platform.name}</artifactId>
+					<version>${swt.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.eclipse.platform</groupId>
+					<artifactId>org.eclipse.swt</artifactId>
+					<version>${swt.version}</version>
+					<exclusions>
+						<exclusion>
+							<groupId>org.eclipse.platform</groupId>
+							<artifactId>${swt.platform.toexclude.name}</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>${exec.maven.plugin}</version>
+						<configuration>
+							<executable>java</executable>
+							<arguments>
+								<argument>--add-opens</argument>
+								<argument>java.base/java.util=ALL-UNNAMED</argument>
+								<argument>${debug.jvm.args}</argument>
+								<argument>${jvm.nativeacess.arg}</argument>
+								<argument>-jar</argument>
+								<argument>${project.build.directory}/${project.artifactId}.jar</argument>
+								<argument>-h</argument>
+							</arguments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 	<properties>
@@ -64,8 +149,7 @@
 		<maven.exec.plugin.classpath.config>-classpath</maven.exec.plugin.classpath.config>
 		<maven.enforcer.plugin>3.6.2</maven.enforcer.plugin>
 		<maven.assembly.plugin.version>3.8.0</maven.assembly.plugin.version>
-		<maven.assembly.plugin.descriptor>
-			src/assembly/assembly.${swt.platform}.xml</maven.assembly.plugin.descriptor>
+		<maven.assembly.plugin.descriptor>src/assembly/assembly.${swt.platform}.xml</maven.assembly.plugin.descriptor>
 		<maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
 		<junit.version>5.10.2</junit.version>
 		<mockito.version>5.7.0</mockito.version>
@@ -85,8 +169,7 @@
 		<commons-cli.version>1.11.0</commons-cli.version>
 		<exec.maven.plugin>3.6.3</exec.maven.plugin>
 		<debug.port>5005</debug.port>
-		<debug.jvm.args>
-			-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:${debug.port}</debug.jvm.args>
+		<debug.jvm.args>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:${debug.port}</debug.jvm.args>
 		<jvm.nativeacess.arg>--enable-native-access=ALL-UNNAMED</jvm.nativeacess.arg>
 		<jisocreator.main.class>cl.cavallinux.jisocreator.action.main.MainAction</jisocreator.main.class>
 	</properties>
@@ -157,11 +240,10 @@
 					<arguments>
 						<argument>--add-opens</argument>
 						<argument>java.base/java.util=ALL-UNNAMED</argument>
-						<argument>${maven.exec.plugin.classpath.config}</argument>
-						<classpath />
 						<argument>${debug.jvm.args}</argument>
 						<argument>${jvm.nativeacess.arg}</argument>
-						<argument>${jisocreator.main.class}</argument>
+						<argument>-jar</argument>
+						<argument>${project.build.directory}/${project.artifactId}.jar</argument>
 					</arguments>
 				</configuration>
 			</plugin>
@@ -179,8 +261,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<finalName>
-						${project.artifactId}-${project.version}-${swt.platform}</finalName>
+					<finalName>${project.artifactId}-${project.version}-${swt.platform}</finalName>
 					<appendAssemblyId>false</appendAssemblyId>
 					<descriptors>
 						<descriptor>${maven.assembly.plugin.descriptor}</descriptor>
@@ -198,6 +279,21 @@
 					</includes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<includeScope>runtime</includeScope>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -206,7 +302,8 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
-			<scope>compile</scope>
+			<scope>provided</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
